--- a/project/css/navbar.css
+++ b/project/css/navbar.css
@@ -1,7 +1,7 @@
 header {
     height: 80px;
     padding: 5px;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 1);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,11 +28,13 @@ nav {
     width: 100%;
     height: 120px;
     padding: 5px;
-    background-color: rgba(255, 255, 255, 0.7);
+    transition: background-color 1s;
+    background-color: rgba(255, 255, 255, 1);
     text-align: center;
     list-style: none;
     visibility: hidden;
     position: absolute;
+    z-index: 1;
     top: 80px;
     left: 0;
     display: flex;
@@ -54,7 +56,7 @@ nav {
 
 .navlinkActive {
     font-weight: 500;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .navLink:hover {
@@ -62,6 +64,9 @@ nav {
 }
 
 @media screen and (min-width: 700px) {
+    header {
+    background-color: rgba(255, 255, 255, 0.7);
+    }
     nav {
         width: auto;
     }
